--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "slidingpuzzle",
   "version": "1.0.0",
   "description": "Cool sliding puzzle program that can solve puzzles for you using different algorithms",
-  "main": "driver.js",
+  "private": true,
   "devDependencies": {
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
