--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.10.1"
+    "webpack-dev-server": "^4.10.1",
+    "workbox-webpack-plugin": "^6.5.4"
   },
   "scripts": {
     "start": "webpack serve --open --config webpack.config.js --mode development",
