--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "N-Puzzle",
-  "name": "Sliding N-Puzzle Game",
+  "short_name": "Sliding Puzzle Solver",
+  "name": "Sliding Puzzle Solver",
   "icons": [
     {
       "src": "favicon.ico",
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#4100a3",
   "background_color": "#cfcfcf"
