--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "devDependencies": {
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
+    "esm": "^3.2.25",
+    "expect.js": "^0.3.1",
     "html-loader": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
+    "mocha": "^10.0.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
@@ -17,9 +20,12 @@
   },
   "scripts": {
     "start": "webpack serve --open --config webpack.config.js --mode development",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js --mode production"
+    "build": "webpack --config webpack.config.js --mode production",
+    "test": "mocha './src/tests/*.test.js' --require esm --timeout 0",
+    "testFull": "FULL_TEST_SUITE=true mocha './src/tests/*.test.js' --require esm --timeout 0",
+    "testStrategic": "mocha './src/tests/strategic*.test.js' --require esm --timeout 0"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jweilhammer/SlidingPuzzle.git"
