--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "workbox-webpack-plugin": "^6.5.4"
   },
   "scripts": {
-    "start": "webpack serve --open --config webpack.config.js --mode development",
-    "build": "webpack --config webpack.config.js --mode production",
+    "start": "webpack serve --open --config webpack.config.cjs --mode development",
+    "build": "webpack --config webpack.config.cjs --mode production",
     "test": "mocha './src/tests/*.test.js' --require esm --timeout 0",
     "testFull": "FULL_TEST_SUITE=true mocha './src/tests/*.test.js' --require esm --timeout 0",
-    "testStrategic": "mocha './src/tests/strategic*.test.js' --require esm --timeout 0"
+    "testStrategic": "mocha './src/tests/strategic*.test.cjs' --require esm --timeout 0"
   },
   "type": "module",
   "repository": {
